Fix pre and code white space (fixes #1986) and removes white space styling from <code>  (#2185)
* remove display:inline (default is alredy inline); align to baseline grid

* change pre to not wrap (fixes #1986); target pre only, (not code)

* change code to inline-block when inside pre; apply correct nudge

* clean up and fix capitalisation

--- a/scss/_base_code.scss
+++ b/scss/_base_code.scss
@@ -20,14 +20,17 @@
     -moz-tab-size: 4;
     -o-tab-size: 4;
     tab-size: 4;
-    white-space: pre-wrap;
     word-spacing: normal;
     word-wrap: break-word;
     // sass-lint:enable no-vendor-prefixes property-sort-order
   }
 
   code {
-    display: inline;
+    pre & {
+      // Inside pre, code does not behave as an inline element;
+      // To ensure multiple lines adhere to the baseline grid, we need to make it a block element.
+      display: inline-block;
+    }
   }
 
   pre {
@@ -39,8 +42,9 @@
     margin-bottom: $spv-outer--scaleable;
     margin-top: 0;
     overflow: auto;
-    padding: $spv-inner--small $sph-inner;
+    padding: calc(#{map-get($nudges, nudge--p-ubuntumono)} - 1px) $sph-inner calc(#{map-get($nudges, nudge--p-ubuntumono)} - 1px);
     text-align: left;
     text-shadow: none;
+    white-space: pre;
   }
 }
